--- a/RandomEngine.vcxproj.filters
+++ b/RandomEngine.vcxproj.filters
@@ -11,26 +11,30 @@
     <ClCompile Include="Game\Object\SpriteObject.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\VertexObject.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Shape.cpp" />
-    <ClCompile Include="Game\Level\Bound.cpp" />
+    <ClCompile Include="Game\Scenes\Level\Bound.cpp" />
     <ClCompile Include="Game\Player.cpp" />
     <ClCompile Include="Game\Scenes\Level.cpp" />
     <ClCompile Include="Game\Object.cpp" />
-    <ClCompile Include="Game\IGameObject.cpp" />
     <ClCompile Include="Game\Collision\RectangleHitbox.cpp" />
     <ClCompile Include="RandomEngine\API\Math\color.cpp" />
     <ClCompile Include="RandomEngine\API\Math\CollisionFunctions.cpp" />
     <ClCompile Include="RandomEngine\API\System\Keyboard.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\File.cpp" />
-    <ClCompile Include="Game\Level\LevelLoader.cpp" />
+    <ClCompile Include="Game\Scenes\Level\LevelLoader.cpp" />
     <ClCompile Include="Game\Player\GameMode.cpp" />
     <ClCompile Include="RandomEngine\API\UI\Button.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Camera.cpp" />
     <ClCompile Include="Game\Scenes\MainMenu.cpp" />
     <ClCompile Include="RandomEngine\API\GlobalData.cpp" />
-    <ClCompile Include="Game\Level\Background.cpp" />
+    <ClCompile Include="Game\Scenes\Level\Background.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\SoundLoader.cpp" />
     <ClCompile Include="RandomEngine\API\Scene.cpp" />
     <ClCompile Include="Game\Scenes\MainScene.cpp" />
+    <ClCompile Include="Game\Scenes\Editor.cpp" />
+    <ClCompile Include="Game\Scenes\Editor\EditorUI.cpp" />
+    <ClCompile Include="RandomEngine\API\UI.cpp" />
+    <ClCompile Include="Game\Scenes\Editor\DevLevel.cpp" />
+    <ClCompile Include="Game\Scenes\Level\LevelBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RandomEngine\API\Application.hpp" />
@@ -49,7 +53,6 @@
     <ClInclude Include="Game\Player.hpp" />
     <ClInclude Include="Game\Object\VertexObject.hpp" />
     <ClInclude Include="Game\Object\SpriteObject.hpp" />
-    <ClInclude Include="Game\Level\Part.hpp" />
     <ClInclude Include="Game\Object\ProcessGroup.hpp" />
     <ClInclude Include="Game\Object\Group.hpp" />
     <ClInclude Include="RandomEngine\API\Math\color.hpp" />
@@ -59,28 +62,34 @@
     <ClInclude Include="RandomEngine\API\Graphics\VertexObject.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Shape.hpp" />
     <ClInclude Include="RandomEngine\API\Tests\Assert.hpp" />
-    <ClInclude Include="Game\Level\Bound.hpp" />
+    <ClInclude Include="Game\Scenes\Level\Bound.hpp" />
     <ClInclude Include="Game\Collision\StaticBody.hpp" />
-    <ClInclude Include="Game\IGameObject.hpp" />
     <ClInclude Include="Game\Collision\RectangleHitbox.hpp" />
     <ClInclude Include="Game\Collision\Hitbox.hpp" />
     <ClInclude Include="RandomEngine\API\Math\CollisionFunctions.hpp" />
     <ClInclude Include="RandomEngine\API\Math\RepulsionResult.hpp" />
     <ClInclude Include="RandomEngine\API\System\Keyboard.hpp" />
-    <ClInclude Include="Game\Level\LevelLoader.hpp" />
+    <ClInclude Include="Game\Scenes\Level\LevelLoader.hpp" />
     <ClInclude Include="RandomEngine\API\Resource\File.hpp" />
     <ClInclude Include="Game\Settings.hpp" />
-    <ClInclude Include="Game\Level\LevelState.hpp" />
+    <ClInclude Include="Game\Scenes\Level\LevelState.hpp" />
     <ClInclude Include="Game\Player\GameMode.hpp" />
     <ClInclude Include="RandomEngine\API\UI\Button.hpp" />
     <ClInclude Include="RandomEngine\API\Scene.hpp" />
     <ClInclude Include="RandomEngine\API\UI.hpp" />
     <ClInclude Include="Game\Scenes\MainMenu.hpp" />
     <ClInclude Include="RandomEngine\API\GlobalData.hpp" />
-    <ClInclude Include="Game\Level\Background.hpp" />
+    <ClInclude Include="Game\Scenes\Level\Background.hpp" />
     <ClInclude Include="RandomEngine\API\Resource\SoundLoader.hpp" />
     <ClInclude Include="Game\Object\Trigger\ITransformableObject.h" />
     <ClInclude Include="Game\Scenes\MainScene.hpp" />
+    <ClInclude Include="Game\Scenes\Editor.hpp" />
+    <ClInclude Include="Game\Scenes\Editor\EditorUI.hpp" />
+    <ClInclude Include="RandomEngine\API\UI\UIComponent.hpp" />
+    <ClInclude Include="Game\Scenes\Editor\DevLevel.hpp" />
+    <ClInclude Include="Game\Scenes\Level\LevelBase.hpp" />
+    <ClInclude Include="Game\Scenes\Editor\ObjectsMenu.hpp" />
+    <ClInclude Include="RandomEngine\API\UI\Tabs.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
