--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="boost" version="1.78.0" targetFramework="native" />
   <package id="boost_container-vc143" version="1.78.0" targetFramework="native" />
   <package id="boost_json-vc143" version="1.78.0" targetFramework="native" />
+  <package id="boost_serialization-vc143" version="1.78.0" targetFramework="native" />
 </packages>
