--- a/RandomEngine.vcxproj.filters
+++ b/RandomEngine.vcxproj.filters
@@ -20,7 +20,6 @@
     <ClCompile Include="RandomEngine\API\Math\CollisionFunctions.cpp" />
     <ClCompile Include="RandomEngine\API\System\Keyboard.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\File.cpp" />
-    <ClCompile Include="Game\Scenes\Level\LevelLoader.cpp" />
     <ClCompile Include="Game\Player\GameMode.cpp" />
     <ClCompile Include="RandomEngine\API\UI\Button.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Camera.cpp" />
@@ -43,6 +42,10 @@
     <ClCompile Include="RandomEngine\API\Graphics\SpriteModel.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\MultiSprite.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\DefaultShaders.cpp" />
+    <ClCompile Include="Game\Scenes\Level\BinaryLevelLoader.cpp" />
+    <ClCompile Include="Game\Scenes\Level\Serializer.cpp" />
+    <ClCompile Include="Game\Object\ObjectActions.cpp" />
+    <ClCompile Include="Game\Object\SpriteObjectBuilder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RandomEngine\API\Application.hpp" />
@@ -77,7 +80,6 @@
     <ClInclude Include="RandomEngine\API\Math\CollisionFunctions.hpp" />
     <ClInclude Include="RandomEngine\API\Math\RepulsionResult.hpp" />
     <ClInclude Include="RandomEngine\API\System\Keyboard.hpp" />
-    <ClInclude Include="Game\Scenes\Level\LevelLoader.hpp" />
     <ClInclude Include="RandomEngine\API\Resource\File.hpp" />
     <ClInclude Include="Game\Settings.hpp" />
     <ClInclude Include="Game\Scenes\Level\LevelState.hpp" />
@@ -103,6 +105,10 @@
     <ClInclude Include="RandomEngine\API\Graphics\SpriteModel.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\MultiSprite.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\DefaultShaders.hpp" />
+    <ClInclude Include="Game\Scenes\Level\BinaryLevelLoader.hpp" />
+    <ClInclude Include="Game\Scenes\Level\Serializer.hpp" />
+    <ClInclude Include="Game\Object\ObjectActions.hpp" />
+    <ClInclude Include="Game\Object\SpriteObjectBuilder.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
