--- a/RandomEngine.vcxproj
+++ b/RandomEngine.vcxproj
@@ -165,7 +165,9 @@
     <ClCompile Include="Game\Collision\RectangleHitbox.cpp" />
     <ClCompile Include="Game\Object\ObjectActions.cpp" />
     <ClCompile Include="Game\Object\SpriteObjectBuilder.cpp" />
+    <ClCompile Include="Game\Object\VertexObject.cpp" />
     <ClCompile Include="Game\Player\PlayerView.cpp" />
+    <ClCompile Include="Game\Player\PlayerView\BallView.cpp" />
     <ClCompile Include="Game\Player\PlayerView\CubeView.cpp" />
     <ClCompile Include="Game\Player\PlayerView\ShipView.cpp" />
     <ClCompile Include="Game\Scenes\Editor\HotkeyHandler.cpp" />
@@ -195,7 +197,6 @@
     <ClCompile Include="RandomEngine\API\Application.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Shape.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Sprite.cpp" />
-    <ClCompile Include="RandomEngine\API\Graphics\VertexObject.cpp" />
     <ClCompile Include="RandomEngine\API\Math\color.cpp" />
     <ClCompile Include="RandomEngine\API\Math\Functions.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\File.cpp" />
@@ -218,6 +219,7 @@
     <ClInclude Include="Game\Object\SpriteObjectBuilder.hpp" />
     <ClInclude Include="Game\Player\IconNumbers.hpp" />
     <ClInclude Include="Game\Player\PlayerView.hpp" />
+    <ClInclude Include="Game\Player\PlayerView\BallView.hpp" />
     <ClInclude Include="Game\Player\PlayerView\CubeView.hpp" />
     <ClInclude Include="Game\Player\PlayerView\IconUnits.hpp" />
     <ClInclude Include="Game\Player\PlayerView\ShipView.hpp" />
@@ -264,7 +266,6 @@
     <ClInclude Include="RandomEngine\API\Graphics\GameObjectBase.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Shape.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Sprite.hpp" />
-    <ClInclude Include="RandomEngine\API\Graphics\VertexObject.hpp" />
     <ClInclude Include="RandomEngine\API\Math.hpp" />
     <ClInclude Include="RandomEngine\API\Math\color.hpp" />
     <ClInclude Include="RandomEngine\API\Math\Functions.hpp" />
