--- a/RandomEngine.vcxproj.filters
+++ b/RandomEngine.vcxproj.filters
@@ -9,7 +9,6 @@
     <ClCompile Include="RandomEngine\API\Resource\ResourceLoader.cpp" />
     <ClCompile Include="RandomEngine\API\Resource\TextureLoader.cpp" />
     <ClCompile Include="Game\Object\SpriteObject.cpp" />
-    <ClCompile Include="RandomEngine\API\Graphics\VertexObject.cpp" />
     <ClCompile Include="RandomEngine\API\Graphics\Shape.cpp" />
     <ClCompile Include="Game\Scenes\Level\Bound.cpp" />
     <ClCompile Include="Game\Player.cpp" />
@@ -50,6 +49,8 @@
     <ClCompile Include="Game\Player\PlayerView\CubeView.cpp" />
     <ClCompile Include="Game\Player\PlayerView\ShipView.cpp" />
     <ClCompile Include="Game\Collision\DynamicBody.cpp" />
+    <ClCompile Include="Game\Player\PlayerView\BallView.cpp" />
+    <ClCompile Include="Game\Object\VertexObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RandomEngine\API\Application.hpp" />
@@ -74,7 +75,6 @@
     <ClInclude Include="RandomEngine\API\Tests\ShapeTests.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\GameObjectBase.hpp" />
     <ClInclude Include="RandomEngine\API\Math\Functions.hpp" />
-    <ClInclude Include="RandomEngine\API\Graphics\VertexObject.hpp" />
     <ClInclude Include="RandomEngine\API\Graphics\Shape.hpp" />
     <ClInclude Include="RandomEngine\API\Tests\Assert.hpp" />
     <ClInclude Include="Game\Scenes\Level\Bound.hpp" />
@@ -119,6 +119,7 @@
     <ClInclude Include="Game\Player\IconNumbers.hpp" />
     <ClInclude Include="Game\Player\PlayerView\ShipView.hpp" />
     <ClInclude Include="Game\Player\PlayerView\IconUnits.hpp" />
+    <ClInclude Include="Game\Player\PlayerView\BallView.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
